tests/algorithms/x/C/quantum/q_fourier_transform.c
// Generated by Mochi 0.10.32 on 2025-08-23 21:18 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>


size_t append_len;
static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

typedef struct { const char **keys; int *vals; size_t len; size_t cap; } MapSI;

static int map_get_si(const char *keys[], const int vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return 0;
}

static void map_set_si(MapSI *m, const char *key, int val) {
    for (size_t i = 0; i < m->len; i++) {
        if (strcmp(m->keys[i], key) == 0) { m->vals[i] = val; return; }
    }
    if (m->len >= m->cap) {
        m->cap = m->cap ? m->cap * 2 : 16;
        m->keys = realloc((void*)m->keys, m->cap * sizeof(char*));
        m->vals = realloc(m->vals, m->cap * sizeof(int));
    }
    m->keys[m->len] = key; m->vals[m->len] = val; m->len++;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

const char* to_bits(long long n, long long width);
MapSI quantum_fourier_transform(long long number_of_qubits);
int main(void);

const char* to_bits(long long n, long long width) {
    const char* res = "";
    long long num = n;
    long long w = width;
    while (w > 0LL) {
        res = str_concat(str_int(num % 2LL), res);
        num = num / 2LL;
        w = w - 1LL;
    }
    return res;
}

MapSI quantum_fourier_transform(long long number_of_qubits) {
    if (number_of_qubits <= 0LL) {
        panic("number of qubits must be > 0.");
    }
    if (number_of_qubits > 10LL) {
        panic("number of qubits too large to simulate(>10).");
    }
    long long shots = 10000LL;
    long long states = 1LL;
    long long p = 0LL;
    while (p < number_of_qubits) {
        states = states * 2LL;
        p = p + 1LL;
    }
    long long per_state = shots / states;
    static const char* counts_keys[16] = {};
    static int counts_vals[16] = {};
    size_t counts_len = 0;
    MapSI counts = { counts_keys, counts_vals, 0, 16 };
    long long i = 0LL;
    while (i < states) {
        map_set_si(&counts, to_bits(i, number_of_qubits), per_state);
        i = i + 1LL;
    }
    return counts;
}

int main(void) {
    {
        long long __start = _now();
        puts(str_concat("Total count for quantum fourier transform state is: ", str_int(quantum_fourier_transform(3LL))));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
